--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@hapi/hapi": "^20.1.3",
     "colors": "^1.4.0",
+    "dotenv": "^9.0.2",
+    "googleapis": "^73.0.0",
     "node-emoji": "^1.10.0"
   },
   "devDependencies": {
